api-docs updates
